--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,7 @@ name: Build
 env:
   RUBY-BUNDLER-CACHE: 'true'
   RUBY-VERSION: '3.1'
+  XCODE-VERSION: '13.3'
 jobs:
   variables:
     name: Prepare Variables
@@ -96,7 +97,7 @@ jobs:
         github_token: "${{secrets.GITHUB_TOKEN}}"
   ruby_unit_tests:
     name: Ruby Unit Tests
-    runs-on: macos-11
+    runs-on: "${{ matrix.os }}"
     needs:
     - variables
     - actionlint
@@ -104,6 +105,11 @@ jobs:
     - rubocop
     - yamllint
     if: "${{always() && (needs.variables.outputs.SKIP_LICENSES != '1' || needs.variables.outputs.SKIP_TESTS != '1') && needs.actionlint.result != 'failure' && needs.markdownlint.result != 'failure' && needs.rubocop.result != 'failure' && needs.yamllint.result != 'failure'}}"
+    strategy:
+      matrix:
+        os:
+        - ubuntu-latest
+        - macos-latest
     steps:
     - name: Setup
       uses: cloud-officer/ci-actions/setup@master
@@ -111,10 +117,7 @@ jobs:
       with:
         ruby-version: "${{env.RUBY-VERSION}}"
         ruby-bundler-cache: "${{env.RUBY-BUNDLER-CACHE}}"
-        ssh-key: "${{secrets.SSH_KEY}}"
-        aws-access-key-id: "${{secrets.AWS_ACCESS_KEY_ID}}"
-        aws-secret-access-key: "${{secrets.AWS_SECRET_ACCESS_KEY}}"
-        aws-region: "${{secrets.AWS_DEFAULT_REGION}}"
+        xcode-version: "${{env.XCODE-VERSION}}"
     - name: Bundler
       shell: bash
       if: "${{needs.variables.outputs.SKIP_LICENSES != '1' || needs.variables.outputs.SKIP_TESTS != '1'}}"
