--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ name: Build
 env:
   RUBY-BUNDLER-CACHE: 'true'
   RUBY-VERSION: '3.1'
-  XCODE-VERSION: '13.3'
+  XCODE-VERSION: 'xcode-latest'
 jobs:
   variables:
     name: Prepare Variables
