Added back ubuntu

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -109,6 +109,7 @@ jobs:
       matrix:
         os:
         - macos-latest
+        - ubuntu-latest
     steps:
     - name: Setup
       uses: cloud-officer/ci-actions/setup@master
