--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,7 +44,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
     - variables
-    if: "${{github.event_name == 'pull_request' || github.event_name == 'pull_request_target'}}"
+    if: "${{(github.event_name == 'pull_request') || (github.event_name == 'pull_request_target')}}"
     steps:
     - name: Actionlint
       id: actionlint
@@ -58,7 +58,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
     - variables
-    if: "${{github.event_name == 'pull_request' || github.event_name == 'pull_request_target'}}"
+    if: "${{(github.event_name == 'pull_request') || (github.event_name == 'pull_request_target')}}"
     steps:
     - name: Markdownlint
       id: markdownlint
@@ -72,7 +72,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
     - variables
-    if: "${{github.event_name == 'pull_request' || github.event_name == 'pull_request_target'}}"
+    if: "${{(github.event_name == 'pull_request') || (github.event_name == 'pull_request_target')}}"
     steps:
     - name: Rubocop
       id: rubocop
@@ -86,7 +86,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
     - variables
-    if: "${{github.event_name == 'pull_request' || github.event_name == 'pull_request_target'}}"
+    if: "${{(github.event_name == 'pull_request') || (github.event_name == 'pull_request_target')}}"
     steps:
     - name: Yamllint
       id: yamllint
@@ -104,7 +104,7 @@ jobs:
     - markdownlint
     - rubocop
     - yamllint
-    if: "${{always() && (needs.variables.outputs.SKIP_LICENSES != '1' || needs.variables.outputs.SKIP_TESTS != '1') && needs.actionlint.result != 'failure' && needs.markdownlint.result != 'failure' && needs.rubocop.result != 'failure' && needs.yamllint.result != 'failure'}}"
+    if: "${{always() && ((needs.variables.outputs.SKIP_LICENSES != '1') || (needs.variables.outputs.SKIP_TESTS != '1')) && needs.actionlint.result != 'failure' && needs.markdownlint.result != 'failure' && needs.rubocop.result != 'failure' && needs.yamllint.result != 'failure'}}"
     strategy:
       matrix:
         os:
@@ -113,18 +113,18 @@ jobs:
     steps:
     - name: Setup
       uses: cloud-officer/ci-actions/setup@master
-      if: "${{needs.variables.outputs.SKIP_LICENSES != '1' || needs.variables.outputs.SKIP_TESTS != '1'}}"
+      if: "${{(needs.variables.outputs.SKIP_LICENSES != '1') || (needs.variables.outputs.SKIP_TESTS != '1')}}"
       with:
         ruby-version: "${{env.RUBY-VERSION}}"
         ruby-bundler-cache: "${{env.RUBY-BUNDLER-CACHE}}"
         xcode-version: "${{env.XCODE-VERSION}}"
     - name: Bundler
       shell: bash
-      if: "${{needs.variables.outputs.SKIP_LICENSES != '1' || needs.variables.outputs.SKIP_TESTS != '1'}}"
+      if: "${{(needs.variables.outputs.SKIP_LICENSES != '1') || (needs.variables.outputs.SKIP_TESTS != '1')}}"
       run: |
         bundle config unset deployment
         bundle install
     - name: RSpec
       shell: bash
-      if: "${{needs.variables.outputs.SKIP_TESTS != '1'}}"
+      if: "${{(needs.variables.outputs.SKIP_TESTS != '1')}}"
       run: "./soup.rb --soup"
