--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -104,8 +104,8 @@ jobs:
     strategy:
       matrix:
         os:
-        - macos-latest
-        - ubuntu-latest
+        - macos-12
+        - ubuntu-22.04
     steps:
     - name: Setup
       id: setup
