Fixed brew on linux

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -136,6 +136,10 @@ jobs:
         ../../bin/soup.rb
         popd
 
+        if [ "${RUNNER_OS}" == "Linux" ]; then
+          eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"
+        fi
+
         brew update
         brew install markdownlint-cli
         markdownlint . --ignore '{**/vendor/**,**/node_modules/**,**/Libraries/**}'
