--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -124,4 +124,22 @@ jobs:
     - name: RSpec
       shell: bash
       if: "${{needs.variables.outputs.SKIP_TESTS != '1'}}"
-      run: "./bin/soup.rb --soup"
+      run: |
+        ./bin/soup.rb --soup
+        pushd tests/composer
+        mv _composer.json composer.json
+        mv _composer.lock composer.lock
+        ../../bin/soup.rb
+        popd
+        pushd tests/pip
+        mv _requirements.txt requirements.txt
+        ../../bin/soup.rb
+        popd
+
+        if [ "${RUNNER_OS}" == "Linux" ]; then
+          eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"
+        fi
+
+        brew update
+        brew install markdownlint-cli
+        markdownlint . --ignore '{**/vendor/**,**/node_modules/**,**/Libraries/**}'
