--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -96,6 +96,19 @@ jobs:
         linters: "${{needs.variables.outputs.LINTERS}}"
         ssh-key: "${{secrets.SSH_KEY}}"
         github_token: "${{secrets.GITHUB_TOKEN}}"
+  licenses:
+    name: Licenses Check
+    runs-on: ubuntu-22.04
+    needs:
+    - variables
+    if: "${{needs.variables.outputs.SKIP_LICENSES != '1'}}"
+    steps:
+    - name: Licenses
+      uses: cloud-officer/ci-actions/soup@master
+      with:
+        ssh-key: "${{secrets.SSH_KEY}}"
+        github-token: "${{secrets.GITHUB_TOKEN}}"
+        parameters: "--no_prompt --soup"
   ruby_unit_tests:
     name: Ruby Unit Tests
     runs-on: "${{ matrix.os }}"
