Added new deploy options

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,7 @@ jobs:
       DEPLOY_ON_PROD: "${{steps.variables.outputs.DEPLOY_ON_PROD}}"
       DEPLOY_MACOS: "${{steps.variables.outputs.DEPLOY_MACOS}}"
       DEPLOY_TVOS: "${{steps.variables.outputs.DEPLOY_TVOS}}"
+      DEPLOY_OPTIONS: "${{steps.variables.outputs.DEPLOY_OPTIONS}}"
       SKIP_LICENSES: "${{steps.variables.outputs.SKIP_LICENSES}}"
       SKIP_LINTERS: "${{steps.variables.outputs.SKIP_LINTERS}}"
       SKIP_TESTS: "${{steps.variables.outputs.SKIP_TESTS}}"
