--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,6 +55,42 @@ jobs:
         linters: "${{needs.variables.outputs.LINTERS}}"
         ssh-key: "${{secrets.SSH_KEY}}"
         github_token: "${{secrets.GITHUB_TOKEN}}"
+  codeql-javascript-typescript:
+    name: CodeQL Javascript-Typescript Linter
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
+    runs-on: ubuntu-22.04
+    needs:
+    - variables
+    if: "${{needs.variables.outputs.SKIP_LINTERS != '1' && (github.event_name == 'pull_request' || github.event_name == 'pull_request_target')}}"
+    steps:
+    - name: CodeQL Javascript-Typescript
+      uses: cloud-officer/ci-actions/linters/codeql@master
+      with:
+        linters: "${{needs.variables.outputs.LINTERS}}"
+        ssh-key: "${{secrets.SSH_KEY}}"
+        github_token: "${{secrets.GITHUB_TOKEN}}"
+        languages: javascript-typescript
+  codeql-ruby:
+    name: CodeQL Ruby Linter
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
+    runs-on: ubuntu-22.04
+    needs:
+    - variables
+    if: "${{needs.variables.outputs.SKIP_LINTERS != '1' && (github.event_name == 'pull_request' || github.event_name == 'pull_request_target')}}"
+    steps:
+    - name: CodeQL Ruby
+      uses: cloud-officer/ci-actions/linters/codeql@master
+      with:
+        linters: "${{needs.variables.outputs.LINTERS}}"
+        ssh-key: "${{secrets.SSH_KEY}}"
+        github_token: "${{secrets.GITHUB_TOKEN}}"
+        languages: ruby
   markdownlint:
     name: Markdown Linter
     runs-on: ubuntu-22.04
