--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,6 +5,14 @@ updates:
   directory: "/"
   schedule:
     interval: monthly
+- package-ecosystem: composer
+  directory: "/"
+  schedule:
+    interval: monthly
+- package-ecosystem: npm
+  directory: "/"
+  schedule:
+    interval: monthly
 - package-ecosystem: bundler
   directory: "/"
   schedule:
