--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -21,20 +21,31 @@ jobs:
           persist-credentials: true
           lfs: true
           submodules: recursive
+
       - name: Get repository name
         run: echo "REPO_NAME=${GITHUB_REPOSITORY##*/}" >> "${GITHUB_ENV}"
+
       # https://github.com/marketplace/actions/docker-login
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+
+      # https://github.com/marketplace/actions/docker-setup-buildx
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          install: true
+          driver-opts: image=moby/buildkit:latest,network=host
+
       # https://github.com/marketplace/actions/docker-metadata-action
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v5
         with:
           images: ${{ secrets.DOCKER_USERNAME }}/${{ env.REPO_NAME }}
+
       # https://github.com/marketplace/actions/build-and-push-docker-images
       - name: Build and push Docker image
         id: push
@@ -46,6 +57,7 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+
       # https://github.com/marketplace/actions/attest-build-provenance
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v1
