--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,67 +1,21 @@
 ---
 name: Publish Docker image
-on:
+'on':
   push:
     tags:
-      - "**"
+    - "**"
 jobs:
   push_to_registry:
     name: Push Docker Image to Docker Hub
-    runs-on: ubuntu-latest
     permissions:
       packages: write
       contents: read
       attestations: write
       id-token: write
+    runs-on: ubuntu-latest
     steps:
-      # https://github.com/marketplace/actions/checkout
-      - name: Check out the repo
-        uses: actions/checkout@v4
-        with:
-          persist-credentials: true
-          lfs: true
-          submodules: recursive
-
-      - name: Get repository name
-        run: echo "REPO_NAME=${GITHUB_REPOSITORY##*/}" >> "${GITHUB_ENV}"
-
-      # https://github.com/marketplace/actions/docker-login
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      # https://github.com/marketplace/actions/docker-setup-buildx
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-        with:
-          install: true
-          driver-opts: image=moby/buildkit:latest,network=host
-
-      # https://github.com/marketplace/actions/docker-metadata-action
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ secrets.DOCKER_USERNAME }}/${{ env.REPO_NAME }}
-
-      # https://github.com/marketplace/actions/build-and-push-docker-images
-      - name: Build and push Docker image
-        id: push
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          file: ./Dockerfile
-          platforms: linux/amd64,linux/arm64
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-
-      # https://github.com/marketplace/actions/attest-build-provenance
-      - name: Generate artifact attestation
-        uses: actions/attest-build-provenance@v1
-        with:
-          subject-name: docker.io/${{ secrets.DOCKER_USERNAME }}/${{ env.REPO_NAME }}
-          subject-digest: ${{ steps.push.outputs.digest }}
-          push-to-registry: false
+    - name: Publish Docker image
+      uses: cloud-officer/ci-actions/docker@master
+      with:
+        username: "${{secrets.DOCKER_USERNAME}}"
+        password: "${{secrets.DOCKER_PASSWORD}}"
