--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ name: Build
     tags:
     - "**"
 env:
-  RUBY-BUNDLER-CACHE: 'true'
+  RUBY-BUNDLER-CACHE: 'false'
   RUBY-VERSION: 3.4.2
   XCODE-VERSION: 15.4.0
 jobs:
@@ -181,7 +181,6 @@ jobs:
       with:
         ruby-version: "${{env.RUBY-VERSION}}"
         ruby-bundler-cache: "${{env.RUBY-BUNDLER-CACHE}}"
-        ruby-cache-version: "${{runner.os}}-${{runner.arch}}-v2"
         xcode-version: "${{env.XCODE-VERSION}}"
     - name: Bundler
       shell: bash
