--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -4,7 +4,7 @@ name: Cron Dependencies
   schedule:
   - cron: 0 9 * * 1
 env:
-  RUBY-BUNDLER-CACHE: 'true'
+  RUBY-BUNDLER-CACHE: 'false'
   RUBY-VERSION: 3.4.2
   XCODE-VERSION: 15.4.0
 jobs:
