--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -5,7 +5,7 @@ name: Cron Dependencies
   - cron: 0 9 * * 1
 env:
   RUBY-BUNDLER-CACHE: 'false'
-  RUBY-VERSION: 3.4.7
+  RUBY-VERSION: 4.0.0
   XCODE-VERSION: 16.4.0
 jobs:
   update_dependencies:
@@ -16,6 +16,7 @@ jobs:
       contents: write
       pull-requests: write
     runs-on: ubuntu-latest
+    timeout-minutes: 30
     steps:
     - name: Setup
       id: setup
