--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -13,6 +13,7 @@ jobs:
       attestations: write
       id-token: write
     runs-on: ubuntu-latest
+    timeout-minutes: 30
     steps:
     - name: Publish Docker image
       uses: cloud-officer/ci-actions/docker@master
