--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -16,7 +16,7 @@ jobs:
     timeout-minutes: 30
     steps:
     - name: Publish Docker image
-      uses: cloud-officer/ci-actions/docker@master
+      uses: cloud-officer/ci-actions/docker@v2
       with:
         username: "${{secrets.DOCKER_USERNAME}}"
         password: "${{secrets.DOCKER_PASSWORD}}"
