Move Ruby version to .ruby-version file and update codeowners

--- a/codeowners
+++ b/codeowners
@@ -9,6 +9,7 @@
 .hadolint.yaml           @ydesgagn
 .markdownlint.yml        @ydesgagn
 .rubocop.yml             @ydesgagn
+.ruby-version            @ydesgagn
 .yamllint.yml            @ydesgagn
 codeowners               @ydesgagn
 bin/                     @ydesgagn
